--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Serverless API hosted on Azure to accompany the D.A.M React Application",
   "repository": "https://github.com/sWiZZleee/dam-serverless-api.git",
-  "author": "Jacob Swan-Mearns <swanservices01@gmail.com>",
+  "author": "Jacob Swan <graphitecaddy@protonmail.com>",
   "license": "private",
   "private": true,
   "scripts": {
@@ -14,14 +14,14 @@
     "ccxt": "^1.18.489"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "eslint": "^8.3.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5"
+    "lint-staged": "^12.1.2"
   },
   "lint-staged": {
     "*.js": [
